--- a/views/show.ejs
+++ b/views/show.ejs
@@ -6,8 +6,16 @@
   </head>
   <body>
     <h1>Ride Show</h1>
-    <%=ride.date%>
-    <%=ride.distance%>
-    <%=ride.topSpeed%>
+    <% if(ride.type === true) { %>
+    Sprint
+  <%} else { %>
+  Hillclimb
+<% } %> 
+    Date: <%=ride.date%><br>
+    Distance: <%=ride.distance%><br>
+    Top Speed: <%=ride.topSpeed%><br>
     </html><button type="button" name="button"><a href="/rides/<%=ride._id%>/edit">Edit</a></button>
+    <form action="/rides/<%=ride._id%>?_method=DELETE" method="POST">
+      <input type="submit" value="DELETE"/>
+      </form>
   </body>
