--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <%- include ('../partials/head.ejs') %>
   </head>
-  <body>
+  <body class="text-center">
     <h1>Rides Edits</h1>
     <form action="/rides/<%=ride.id%>?_method=PUT" method="POST">
-      <label for="type">Was this a sprint?:</label>
-      <input type="checkbox" name="type" value="<%ride.type%>">
-      <label for="date">Date:</label>
-      <input type="text" name="date" value="<%ride.date%>">
+<br>
+      <label for="letter">letter:</label>
+      <input type="text" name="letter" value="<%=ride.letter%>">
+<br>
       <label for="distance">Distance:</label>
-      <input type="number" name="distance" value="<%=ride.distance%>">
+      <input type="mongoose.Types.Decimal128" name="distance" value="<%=ride.distance%>">
+<br>
       <label for="topSpeed">Top Speed:</label>
-      <input type="number" name="topSpeed" value="<%ride.topSpeed%>">
+      <input type="mongoose.Types.Decimal128" name="topSpeed" value="<%=ride.topSpeed%>">
+<br>
     <input type="submit" value="Submit">
     </form>
     <button type="button" name="button">
