--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title></title>
+      <%- include ('./partials/head.ejs') %>
   </head>
   <body>
-    <a href="/rides/f">f</a>
+    <div class="container">
+
+
+
+
+<h1>Welcome</h1>
+    <a href="/rides">see rides</a>
+  <form action="/sessions?_method=DELETE" method="POST">
+    <input type="submit" value="Log Out" class="btn-small red" />
+  </form>
+
+
+<a href="/users/new">Sign Up</a>
+<a href="/sessions/new">Log In</a>
+</div>
   </body>
 </html>
