--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-  <%- include ('../partials/head.ejs') %>
+  <%- include ('./partials/head.ejs') %>
   </head>
   <body>
+    <div class="container">
+
     <h1>Ride Show</h1>
-    Letter: <%=ride.letter%><br>
-    Distance: <%=ride.distance%><br>
+    username: <%=ride.username%><br>
+    Time: <%=ride.time%><br>
     Top Speed: <%=ride.topSpeed%><br>
-    </html><button type="button" name="button"><a href="/rides/<%=ride._id%>/edit">Edit</a></button>
+    </html><a href="/rides/<%=ride._id%>/edit"><button type="button" name="button">Edit</button></a>
     <form action="/rides/<%=ride._id%>?_method=DELETE" method="POST">
       <input type="submit" value="DELETE"/>
       </form>
+        </div>
   </body>
