changed pathways to hopefully fix heroku problem

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,11 @@
   <head>
     <%- include ('./partials/head.ejs') %>
   </head>
-  <body class="text-center">
-
-    <div class=>
+    <body class="text-center">
+      <nav>
+        <%- include ('./partials/nav.ejs') %>
+      </nav>
+    <div>
 
       <h1>1000 ft. drag</h1>
           <table class="table">
