--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,19 +5,35 @@
   </head>
   <body>
     <div class="container">
-
-
-
-
 <h1>Welcome</h1>
-    <a href="/rides">see rides</a>
-  <form action="/sessions?_method=DELETE" method="POST">
-    <input type="submit" value="Log Out" class="btn-small red" />
-  </form>
 
+<a href="/users/new">Sign Up</a><br>
+<a href="/sessions/new">Log In</a><br>
+<br>
+<p>The current leaderboard is for the 1000ft drag on East 5th st.</p>
+<p>It start east of Springdale Rd and lasts until you pass Spencer Ln.</p>
+</div>
+<div>
 
-<a href="/users/new">Sign Up</a>
-<a href="/sessions/new">Log In</a>
+  <h1>1000 ft. drag</h1>
+      <table class="table">
+  <% for (let ride of rides) { %>
+  <thead>
+    <tr>
+      <th></th>
+      <th>Time</th>
+      <th>Top Speed</th>
+      <th></th>
+    </tr>
+  </thead>
+    <tr>
+      <td><%= ride.username%> </td>
+      <td><%= ride.time %></td>
+      <td><%= ride.topSpeed %></td>
+      <td><a href="/rides/<%=ride._id%>"><button type="button" name="Show">Ride Data</button></a></td>
+    </tr>
+  <%}%>
+  </table>
 </div>
   </body>
 </html>
