--- a/views/new.ejs
+++ b/views/new.ejs
@@ -4,12 +4,15 @@
       <%- include ('./partials/head.ejs') %>
     </head>
     <body>
+      <div class="container">
+        <%- include ('./partials/nav.ejs') %>
         <h1>New Rides page</h1>
-        <form action="/rides" method="POST">
-            <input style="display:none" name="username" value="<%=currentUser.username%>"><br>
-            Time: <input type="mongoose.Types.Decimal128" name="time" placeholder="in seconds"/><br>
-            Top Speed: <input type="mongoose.Types.Decimal128" name="topSpeed" placeholder="mph"/><br>
-            <input type="submit" name="" value="Create Ride"/>
-        </form>
+          <form action="/rides" method="POST">
+              <input style="display:none" name="username" value="<%=currentUser.username%>"><br>
+              Time: <input type="mongoose.Types.Decimal128" name="time" placeholder="in seconds"/><br>
+              Top Speed: <input type="mongoose.Types.Decimal128" name="topSpeed" placeholder="mph"/><br>
+              <input type="submit" name="" value="Create Ride"/>
+          </form>
+        </div>
     </body>
 </html>
