more changes for heroku

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,10 +5,9 @@
   </head>
   <body>
     <div class="container">
-<h1>Welcome</h1>
-
-<a href="/users/new">Sign Up</a><br>
-<a href="/sessions/new">Log In</a><br>
+      <nav>
+        <%- include ('./partials/nav.ejs') %>
+      </nav>
 <br>
 <p>The current leaderboard is for the 1000ft drag on East 5th st.</p>
 <p>It start east of Springdale Rd and lasts until you pass Spencer Ln.</p>
