--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <%- include ('./partials/head.ejs') %>
   </head>
-    <body class="text-center">
+    <body class="container">
       <nav>
         <%- include ('./partials/nav.ejs') %>
       </nav>
