--- a/views/new.ejs
+++ b/views/new.ejs
@@ -4,14 +4,16 @@
       <%- include ('./partials/head.ejs') %>
     </head>
     <body>
-      <div class="container">
+      <div class="container" style=" margin-top: 20px">
         <%- include ('./partials/nav.ejs') %>
-        <h1>New Rides page</h1>
+        <h1>Add a new effort</h1>
           <form action="/rides" method="POST">
               <input style="display:none" name="username" value="<%=currentUser.username%>"><br>
+              <label for="img">Image to verify:</label>
+              <input type="text" name="imgVerify" required id="image" placeholder="link to ride"><br>
               Time: <input type="mongoose.Types.Decimal128" name="time" placeholder="in seconds"/><br>
               Top Speed: <input type="mongoose.Types.Decimal128" name="topSpeed" placeholder="mph"/><br>
-              <input type="submit" name="" value="Create Ride"/>
+              <input style= "margin-top: 20px" type="submit" name="" value="Create Ride"/>
           </form>
         </div>
     </body>
