--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,13 +1,13 @@
-<ul style="list-style:none">
+<ul class="nav justified">
   <% if (currentUser) { %>
-  <li>Welcome <%= currentUser.username %></li>
-  <li>
+  <li class="nav-item" style= "margin-right:10px">Welcome <strong><%= currentUser.username %> </strong></li>
+  <li class="justify-right" >
     <form action="/sessions?_method=DELETE" method="POST">
       <input type="submit" value="Log Out" class="btn-small red" />
     </form>
   </li>
   <% } else { %>
-  <li><a href="/users/new">Sign Up</a></li>
+  <li style= "margin-right:15px"><a href="/users/new">Sign Up</a></li>
   <li><a href="/sessions/new">Log In</a></li>
   <% } %>
 </ul>
