--- a/views/show.ejs
+++ b/views/show.ejs
@@ -4,15 +4,17 @@
   <%- include ('./partials/head.ejs') %>
   </head>
   <body>
-    <div class="container">
+    <div <div class="container" style=" margin-top: 20px">
 
-    <h1>Ride Show</h1>
+    <h1>Ride Information</h1>
     username: <%=ride.username%><br>
     Time: <%=ride.time%><br>
     Top Speed: <%=ride.topSpeed%><br>
-    </html><a href="/rides/<%=ride._id%>/edit"><button type="button" name="button">Edit</button></a>
-    <form action="/rides/<%=ride._id%>?_method=DELETE" method="POST">
+    Proof: <a href="<%=ride.imgVerify%>"><%=ride.imgVerify%></a><br>
+  <a href="/rides/<%=ride._id%>/edit"><button type="button" name="button">Edit</button></a>
+    <form action="/rides/<%=ride._id%>?_method=DELETE" method="POST" style="margin-top:20px">
       <input type="submit" value="DELETE"/>
       </form>
         </div>
   </body>
+  </html>
