table formatted to center and readable on mobile

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,14 +10,16 @@
       </nav>
 <br>
 <h3>Feel the need for some socially distant cycling competition?</h3>
-<p>There will be a leaderboard for top sprints/hillclimbs around Austin</</br>Currently the only leaderboard is for the 1000ft drag on East 5th st.</br>
-It starts east of Springdale Rd and lasts until you pass Spencer Ln.</p>
+<p>There will be a leaderboard for top sprints/hillclimbs around Austin</br>Currently the only leaderboard is for the 1000ft drag on East 5th st.</br>
+It starts east of Springdale Rd and lasts until you pass Spencer Ln.</p><br>
+<p>Here's the Strava link for segment info:
+<a href="https://www.strava.com/segments/8181413">https://www.strava.com/segments/8181413</a> </p>
 </div>
-<div>
+<div style="justify-content:center">
 
   <h1>1000 ft. drag</h1>
 
-      <table class="table" id="table" data-toggle="table" data-sort-order="desc" data-sort-name="time">
+      <table style="max-width:80%" align=center class="table" id="table" data-toggle="table" data-sort-order="desc" data-sort-name="time">
 
   <thead>
     <tr>
@@ -39,7 +41,7 @@ It starts east of Springdale Rd and lasts until you pass Spencer Ln.</p>
 
   <%if (currentUser) {%>
   <a href="/rides/new">
-  <button type="button" name="New Ride" >
+  <button style="margin-top:15px" type="button" name="New Ride" >
     Create New Ride
   </button>
   </a>
