--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,4 +1,4 @@
-<ul class="nav justified">
+<ul class="nav justified" style="margin-top:10px">
   <% if (currentUser) { %>
   <li class="nav-item" style= "margin-right:10px">Welcome <strong><%= currentUser.username %> </strong></li>
   <li class="justify-right" >
