--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -3,8 +3,10 @@
   <head>
     <%- include ('./partials/head.ejs') %>
   </head>
-  <body>
+  <body style="background-color:teal">
+
     <div class="container">
+        <%- include ('./partials/nav.ejs') %>
     <h1>Edit this ride</h1>
 
     <form action="/rides/<%=ride.id%>?_method=PUT" method="POST">
@@ -22,7 +24,7 @@
 <br>
     <input type="submit" value="Submit" style="margin-top:20px">
     </form>
-      <a href="/rides">
+      <a href="/rides/home">
     <button type="button" name="button" style="margin-top:20px">
     Back
     </button></a>
