--- a/views/show.ejs
+++ b/views/show.ejs
@@ -3,14 +3,14 @@
   <head>
   <%- include ('./partials/head.ejs') %>
   </head>
-  <body>
+  <body style="background-color:teal">
     <div <div class="container" style=" margin-top: 20px">
 
     <h1>Ride Information</h1>
     username: <%=ride.username%><br>
     Time: <%=ride.time%><br>
     Top Speed: <%=ride.topSpeed%><br>
-    Proof: <a href="<%=ride.imgVerify%>"><%=ride.imgVerify%></a><br>
+    Proof: <a style="color:black" href="<%=ride.imgVerify%>"><%=ride.imgVerify%></a><br>
   <a href="/rides/<%=ride._id%>/edit"><button type="button" name="button">Edit</button></a>
     <form action="/rides/<%=ride._id%>?_method=DELETE" method="POST" style="margin-top:20px">
       <input type="submit" value="DELETE"/>
