fixed pathing from edit back to show

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -24,9 +24,9 @@
 <br>
     <input type="submit" value="Submit" style="margin-top:20px">
     </form>
-      <a href="/rides/home">
-    <button type="button" name="button" style="margin-top:20px">
-    Back
+      <a href="/rides/<%=ride._id%>">
+        <button type="button" name="button" style="margin-top:20px">
+          Back
     </button></a>
     </div>
   </body>
