--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,7 +7,7 @@
     </form>
   </li>
   <% } else { %>
-  <li style= "margin-right:15px; margin-left:15px"><a href="/users/new">Sign Up</a></li>
-  <li><a href="/sessions/new">Log In</a></li>
+  <li style= "margin-right:15px; margin-left:15px"><a style="color:black" href="/users/new">Sign Up</a></li>
+  <li><a style="color:black" href="/sessions/new">Log In</a></li>
   <% } %>
 </ul>
