--- a/views/show.ejs
+++ b/views/show.ejs
@@ -4,7 +4,11 @@
   <%- include ('./partials/head.ejs') %>
   </head>
   <body style="background-color:teal">
+
     <div <div class="container" style=" margin-top: 20px">
+      <nav class>
+        <%- include ('./partials/nav.ejs') %>
+      </nav>
 
     <h1>Ride Information</h1>
     username: <%=ride.username%><br>
