--- a/views/new.ejs
+++ b/views/new.ejs
@@ -3,8 +3,8 @@
     <head>
       <%- include ('./partials/head.ejs') %>
     </head>
-    <body>
-      <div class="container" style="background-color:teal">
+    <body style="background-color:teal">
+      <div class="container" >
         <%- include ('./partials/nav.ejs') %>
         <h1>Add a new effort</h1>
           <form action="/rides" method="POST">
