--- a/views/home.ejs
+++ b/views/home.ejs
@@ -25,7 +25,7 @@ It starts east of Springdale Rd and lasts until you pass Spencer Ln.</p><br>
 
       <table style="max-width:70%" align=center class="table" id="table" data-toggle="table" data-sort-order="asc" data-sort-name="time">
 
-  <thead>
+  <thead style="background-color:#28a745">
     <tr>
       <th>Rider Name</th>
       <th data-field="time" data-sortable="true">Time</th>
