--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -3,7 +3,7 @@
   <head>
     <%- include ('../partials/head.ejs') %>
   </head>
-  <body>
+  <body style="background-color:#28a745">
 
     <div class="container">
       <h1>New User</h1>
